--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhWt86tFO95YcwrGe00ys9",
+      "authorship_tag": "ABX9TyN9iGBgKgNvsSxhkIKwqmU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gtG6OJL8Dltz",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Clone the repo**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fWpejQ074CEd",
@@ -66,9 +76,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Fashion-MNIST is intended to serve as a direct drop-in replacement for the original MNIST dataset to benchmark machine learning algorithms, as it shares the same image size and the structure of training and testing splits.<br><br>\n",
-        "'test'\t10,000\n",
-        "'train'\t60,000"
+        "Fashion-MNIST is intended to serve as a direct drop-in replacement for the original MNIST dataset to benchmark machine learning algorithms, as it shares the same image size and the structure of training and testing splits.<br><br>\n"
       ]
     },
     {
@@ -95,6 +103,16 @@
         "# **Set the runtime to GPU**\n",
         "\n",
         "Runtime> Change Runtime Type > Python 3 > GPU"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1UjYSxjbDtPD",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Load the necessary libraries**"
       ]
     },
     {
@@ -154,7 +172,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Fashion MNIST Data Set**"
+        "# **Load the Fashion MNIST Data Set**"
       ]
     },
     {
@@ -195,18 +213,18 @@
       },
       "source": [
         "The classes: <br>\n",
-        "The ten fashion class labels include:\n",
+        "The ten fashion class labels include:<br>\n",
         "\n",
-        "T-shirt/top\n",
-        "Trouser/pants\n",
-        "Pullover shirt\n",
-        "Dress\n",
-        "Coat\n",
-        "Sandal\n",
-        "Shirt\n",
-        "Sneaker\n",
-        "Bag\n",
-        "Ankle boot\n"
+        "T-shirt/top<br>\n",
+        "Trouser/pants<br>\n",
+        "Pullover shirt<br>\n",
+        "Dress<br>\n",
+        "Coat<br>\n",
+        "Sandal<br>\n",
+        "Shirt<br>\n",
+        "Sneaker<br>\n",
+        "Bag<br>\n",
+        "Ankle boot<br>\n"
       ]
     },
     {
@@ -222,6 +240,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wX_O5rnHD7D3",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Examine the data**"
+      ]
     },
     {
       "cell_type": "code",
@@ -252,6 +280,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "evWi5a8uD_YP",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Define some of the hyperparameters**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3FGhOs7NAAcC",
@@ -267,6 +305,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BkAnT5E0EG4A",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Reshape the images for the model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -290,6 +338,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bi1aRBivEMBE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Normalize the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-kT-ecK-AHUl",
@@ -307,6 +365,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VorNyr6dEPrD",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Convert data from categorical to numerical**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "YC9o-UqNAKUr",
@@ -320,6 +388,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gkcXUMn-EXSw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Define the model<br>\n",
+        "kernel sizes, activation functions, pool size, dropout rate, layer size"
+      ]
     },
     {
       "cell_type": "code",
@@ -346,6 +425,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-wi-vU64EpWL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Set up early stopping, if necessary**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TV7l3XSTAQ9o",
@@ -366,6 +455,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vl4eZYosEuNe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9LVXFyXoAUeN",
@@ -382,6 +481,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-MZpWKcDEy5A",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Plot the performance**"
+      ]
     },
     {
       "cell_type": "code",
@@ -404,6 +513,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6AtuNGoJE3iB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create a montage of the images and labels**"
+      ]
     },
     {
       "cell_type": "code",
@@ -479,7 +598,7 @@
         "id": "pQjUN7mkBPpI",
         "colab_type": "code",
         "colab": {},
-        "cellView": "both"
+        "cellView": "form"
       },
       "source": [
         "#@title \n",
