--- a/tripAdvisor.ipynb
+++ b/tripAdvisor.ipynb
@@ -7,13 +7,14 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIuwx5Z4I6mAFjhNrpcO7+",
+      "authorship_tag": "ABX9TyNMhua0yN9PtFEQTMks79CZ",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,20 +30,66 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Y_6O04DYPRCx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo\n",
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MypXQXCrGAtO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Set the runtime to GPU**\n",
+        "Runtime> Change Runtime Type > Python 3 > GPU"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "9qyn8U795R7y",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
+        "\n",
+        "# Install TensorFlow\n",
+        "try:\n",
+        "  # %tensorflow_version only exists in Colab.\n",
+        "  %tensorflow_version 2.x\n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
         "import tensorflow as tf\n",
-        "from keras.models import Sequential\n",
+        "import pathlib\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
-        "from keras.layers import Dense\n",
+        "import seaborn as sns\n",
         "import numpy as np\n",
+        "\n",
+        "from keras import optimizers\n",
+        "from keras.utils import to_categorical\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers import Activation, Dense\n",
         "from keras.utils import np_utils\n",
         "from sklearn.model_selection import train_test_split\n",
         "from keras.models import Sequential\n",
-        "from keras.layers import Dense"
+        "from keras.layers import Dense\n",
+        "\n",
+        "print(tf.__version__)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -69,7 +116,20 @@
         "\t        'Score','Period of stay','Traveler type','Pool','Gym','Tennis court',\n",
         "\t        'Spa','Casino','Free internet','Hotel name','Hotel stars','Nr. rooms',\n",
         "          'User continent','Member years','Review month','Review weekday']\n",
-        "data = pd.read_csv('https://github.com/chantelmariediaz/Scraping-TripAdvisor-with-Python/blob/master/TripAdvisor%20Flagstaff%20Reviews.csv', delimiter=',',names=cols)\n"
+        "data = pd.read_csv('tripAdvisorReviews.csv', delimiter=',')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cd2OFyxVGUjw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data.head()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -82,8 +142,8 @@
         "colab": {}
       },
       "source": [
-        "labels = data['Score']\n",
-        "features = data.drop(['Score'], axis=1)\n",
+        "labels = data['score']\n",
+        "features = data.drop(['score'], axis=1)\n",
         "X=features\n",
         "y=np_utils.to_categorical(labels)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42) "
