--- a/tripAdvisor.ipynb
+++ b/tripAdvisor.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMhua0yN9PtFEQTMks79CZ",
+      "authorship_tag": "ABX9TyMBu7ZclDpssZqS3NpqKiYX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,9 +79,8 @@
         "import seaborn as sns\n",
         "import numpy as np\n",
         "\n",
-        "from keras import optimizers\n",
-        "from keras.utils import to_categorical\n",
-        "from tensorflow import keras\n",
+        "from tensorflow.keras import optimizers\n",
+        "from tensorflow.keras.utils import to_categorical\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras.layers import Activation, Dense\n",
         "from keras.utils import np_utils\n",
@@ -112,11 +111,11 @@
         "colab": {}
       },
       "source": [
-        "cols = ['User country', 'Nr. reviews','Nr. hotel reviews','Helpful votes',\n",
-        "\t        'Score','Period of stay','Traveler type','Pool','Gym','Tennis court',\n",
-        "\t        'Spa','Casino','Free internet','Hotel name','Hotel stars','Nr. rooms',\n",
-        "          'User continent','Member years','Review month','Review weekday']\n",
-        "data = pd.read_csv('tripAdvisorReviews.csv', delimiter=',')\n"
+        "cols = ['Usercountry', 'Nrreviews','Nrhotelreviews','Helpfulvotes','Score','Periodofstay',\n",
+        "          'Travelertype','Pool','Gym','Tenniscourt','Spa','Casino','Freeinternet',\n",
+        "                 'Hotelname','Hotelstars','Nrrooms','Usercontinent','Memberyears',\n",
+        "          'Reviewmonth','Reviewweekday']\n",
+        "data = pd.read_csv('tripAdvisorReviews.csv', delimiter=',', header=None, names=cols)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -137,13 +136,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "m7r5pNOUWHd-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data.columns"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "-DKaUqK17692",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "labels = data['score']\n",
-        "features = data.drop(['score'], axis=1)\n",
+        "labels = data['Score']\n",
+        "features = data.drop(['Score'], axis=1)\n",
         "X=features\n",
         "y=np_utils.to_categorical(labels)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42) "
