--- a/tripAdvisor.ipynb
+++ b/tripAdvisor.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBu7ZclDpssZqS3NpqKiYX",
+      "authorship_tag": "ABX9TyOWKVV5VVeJjGD3qLRVXQCp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,8 +62,6 @@
         "colab": {}
       },
       "source": [
-        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
-        "\n",
         "# Install TensorFlow\n",
         "try:\n",
         "  # %tensorflow_version only exists in Colab.\n",
@@ -78,17 +76,23 @@
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import numpy as np\n",
+        "import cv2\n",
+        "from imutils import build_montages\n",
         "\n",
+        "import tensorflow.keras\n",
+        "from tensorflow.keras.datasets import fashion_mnist\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras import backend as K\n",
         "from tensorflow.keras import optimizers\n",
         "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
-        "from tensorflow.keras.layers import Activation, Dense\n",
-        "from keras.utils import np_utils\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense\n",
+        "from tensorflow.keras.layers import Activation, Dense, Dropout, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "#Adding Callback for early stopping\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
         "\n",
-        "print(tf.__version__)"
+        "print(tf.__version__)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -113,7 +117,7 @@
       "source": [
         "cols = ['Usercountry', 'Nrreviews','Nrhotelreviews','Helpfulvotes','Score','Periodofstay',\n",
         "          'Travelertype','Pool','Gym','Tenniscourt','Spa','Casino','Freeinternet',\n",
-        "                 'Hotelname','Hotelstars','Nrrooms','Usercontinent','Memberyears',\n",
+        "          'Hotelname','Hotelstars','Nrrooms','Usercontinent','Memberyears',\n",
         "          'Reviewmonth','Reviewweekday']\n",
         "data = pd.read_csv('tripAdvisorReviews.csv', delimiter=',', header=None, names=cols)\n"
       ],
@@ -166,16 +170,88 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "tH1e9srzaEFV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Convert and  scale the test and training data. Bring the scale from 0-255 to 0-1.\n",
+        "X_train = X_train.astype('float32')\n",
+        "X_test = X_test.astype('float32')\n",
+        "X_train /= 255\n",
+        "X_test /= 255"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mJAI3sy_cAdu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train.shape[1]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S-Q2clVWjGRb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_train.shape"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Jy0cYgdh5G0p",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "#Define the model\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPool2D, Dense, Flatten, Dropout, BatchNormalization\n",
+        "\n",
+        "#keras.layers.BatchNormalization()\n",
+        "\n",
         "model = Sequential()\n",
-        "model.add(Dense(8,  input_dim=19, activation='relu'))\n",
+        "# Dense(64) is a fully-connected layer with 64 hidden units.\n",
+        "# in the first layer, you must specify the expected input data shape:\n",
+        "model.add(Dense(64, activation='relu', input_dim=X_train.shape[1]))\n",
+        "model.add(Dropout(0.5))\n",
+        "#model.add(Dense(64, activation='relu'))\n",
+        "#model.add(Dropout(0.5))\n",
         "model.add(Dense(6, activation='softmax'))\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])                   \n",
-        "model.fit(X_train, y_train,epochs=4, batch_size=1, verbose=1)"
+        "\n",
+        "model.compile(loss='categorical_crossentropy',\n",
+        "              optimizer='rmsprop',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3sJitFDjgszQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.fit(X_train, y_train,\n",
+        "          epochs=20,\n",
+        "          batch_size=32)\n",
+        "score = model.evaluate(X_test, y_test, batch_size=32)"
       ],
       "execution_count": 0,
       "outputs": []
