--- a/HyperParameter_Tuning.ipynb
+++ b/HyperParameter_Tuning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "mount_file_id": "1LuvHfEnqdDu_2LKIuNUBSbOPm2T0djpx",
-      "authorship_tag": "ABX9TyPMHPjqujzkgMQW5zg8oLCu",
+      "authorship_tag": "ABX9TyPlTnZp7OVCQL6qHxlFChtl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,14 +46,44 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "G3dKEmFUn5sV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
+        "\n",
+        "# Install TensorFlow\n",
+        "try:\n",
+        "  # %tensorflow_version only exists in Colab.\n",
+        "  %tensorflow_version 2.x\n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "import pathlib\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "\n",
+        "\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "print(tf.__version__)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "oGp3l_9kdwbx",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#import data\n",
-        "import pandas as pd\n",
-        "\n",
         "bc_data = pd.read_csv('breast_cancer_data.csv')\n",
         "#view top 10 rows\n",
         "bc_data.head(10)\n"
@@ -127,29 +157,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DD0oneJKiKHL",
+        "id": "Batt9X1xmL4P",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#Split data into attributes and class\n",
+        "#Split data into features and labels\n",
         "X = bc_data.drop(['c_diagnosis'],axis=1)\n",
-        "y = bc_data['c_diagnosis']\n",
-        "\n",
+        "y = bc_data['c_diagnosis']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DxbcELlumOC3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "#perform training and test split\n",
         "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-        "\n",
-        "#Dummy Classifier\n",
-        "from sklearn.dummy import DummyClassifier\n",
-        "clf = DummyClassifier(strategy= 'most_frequent').fit(X_train,y_train)\n",
-        "y_pred = clf.predict(X_test)\n",
-        "\n",
-        "#Distribution of y test\n",
-        "print('y actual : \\n' +  str(y_test.value_counts()))\n",
-        "\n",
-        "#Distribution of y predicted\n",
-        "print('y predicted : \\n' + str(pd.Series(y_pred).value_counts()))"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sT7mTfFmmQDC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_stats = X_train.describe()\n",
+        "#train_stats.pop(\"c_diagnosis\")\n",
+        "train_stats = train_stats.transpose()\n",
+        "train_stats"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b31pGGLpm1OX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_stats = X_test.describe()\n",
+        "test_stats = test_stats.transpose()\n",
+        "test_stats"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrA_Ao0Fm9Mu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def norm(x):\n",
+        "  return (x - train_stats['mean']) / train_stats['std']\n",
+        "normed_train_data = norm(X_train)\n",
+        "normed_test_data = norm(X_test)\n",
+        "print(\"done\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -164,14 +242,7 @@
       "source": [
         "# Model Evaluation metrics \n",
         "from sklearn.metrics import accuracy_score,recall_score,precision_score,f1_score\n",
-        "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))\n",
-        "print('Precision Score : ' + str(precision_score(y_test,y_pred)))\n",
-        "#print('Recall Score : ' + str(recall_score(y_test,y_pred)))\n",
-        "#print('F1 Score : ' + str(f1_score(y_test,y_pred)))\n",
-        "\n",
-        "#Dummy Classifier Confusion matrix\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "print('Confusion Matrix : \\n' + str(confusion_matrix(y_test,y_pred)))"
+        "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -190,16 +261,115 @@
         "clf = LogisticRegression().fit(X_train,y_train)\n",
         "y_pred = clf.predict(X_test)\n",
         "\n",
-        "# Model Evaluation metrics \n",
-        "from sklearn.metrics import accuracy_score,recall_score,precision_score,f1_score\n",
-        "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))\n",
-        "print('Precision Score : ' + str(precision_score(y_test,y_pred)))\n",
-        "print('Recall Score : ' + str(recall_score(y_test,y_pred)))\n",
-        "print('F1 Score : ' + str(f1_score(y_test,y_pred)))\n",
-        "\n",
         "#Logistic Regression Classifier Confusion matrix\n",
         "from sklearn.metrics import confusion_matrix\n",
-        "print('Confusion Matrix : \\n' + str(confusion_matrix(y_test,y_pred)))\n"
+        "print('Confusion Matrix : \\n' + str(confusion_matrix(y_test,y_pred)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "01DDWRhAniPI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "inputs = len(X_train.keys())\n",
+        "print(\"number of inputs to the model = \" + str(inputs))\n",
+        "\n",
+        "def build_model():\n",
+        "  model = keras.Sequential([\n",
+        "    #input_shape=(9,),\n",
+        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(X_train.keys())]),),\n",
+        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    layers.Dense(1)\n",
+        "  ])\n",
+        "\n",
+        "  optimizer = tf.keras.optimizers.RMSprop(0.001)\n",
+        "\n",
+        "  model.compile(loss='mean_squared_error',\n",
+        "                optimizer=optimizer,\n",
+        "                metrics=['mean_absolute_error', 'mean_squared_error'])\n",
+        "  return model\n",
+        "  print(\"done\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wuhFLVBtnxuI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = build_model()\n",
+        "print(\"done\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AxsXX3jsoOkB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class PrintDot(keras.callbacks.Callback):\n",
+        "  def on_epoch_end(self, epoch, logs):\n",
+        "    if epoch % 100 == 0: print('')\n",
+        "    print('.', end='')\n",
+        "\n",
+        "EPOCHS = 10\n",
+        "\n",
+        "history = model.fit(\n",
+        "  normed_train_data, y_train,\n",
+        "  epochs=EPOCHS, validation_split = 0.2, verbose=0,\n",
+        "  callbacks=[PrintDot()])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4w31MhwToYPu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def plot_history(history):\n",
+        "  hist = pd.DataFrame(history.history)\n",
+        "  hist['epoch'] = history.epoch\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Abs Error [MPG]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_absolute_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_absolute_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,5])\n",
+        "  plt.legend()\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Square Error [$MPG^2$]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_squared_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_squared_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,20])\n",
+        "  plt.legend()\n",
+        "  plt.show()\n",
+        "\n",
+        "\n",
+        "plot_history(history)"
       ],
       "execution_count": 0,
       "outputs": []
