--- a/HyperParameter_Tuning.ipynb
+++ b/HyperParameter_Tuning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "mount_file_id": "1LuvHfEnqdDu_2LKIuNUBSbOPm2T0djpx",
-      "authorship_tag": "ABX9TyPlTnZp7OVCQL6qHxlFChtl",
+      "authorship_tag": "ABX9TyM6wq7L069VIYVACB6Pcsnm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,21 +235,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-pYM1BFsjfZI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Model Evaluation metrics \n",
-        "from sklearn.metrics import accuracy_score,recall_score,precision_score,f1_score\n",
-        "print('Accuracy Score : ' + str(accuracy_score(y_test,y_pred)))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "XY6w3AmLkY88",
         "colab_type": "code",
         "colab": {}
@@ -281,9 +266,8 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    #input_shape=(9,),\n",
-        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(X_train.keys())]),),\n",
-        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    layers.Dense(16, activation=tf.nn.relu,input_shape=([len(X_train.keys())]),),\n",
+        "    layers.Dense(16, activation=tf.nn.relu),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -320,17 +304,12 @@
         "colab": {}
       },
       "source": [
-        "class PrintDot(keras.callbacks.Callback):\n",
-        "  def on_epoch_end(self, epoch, logs):\n",
-        "    if epoch % 100 == 0: print('')\n",
-        "    print('.', end='')\n",
-        "\n",
-        "EPOCHS = 10\n",
+        "EPOCHS = 1\n",
         "\n",
         "history = model.fit(\n",
         "  normed_train_data, y_train,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=0,\n",
-        "  callbacks=[PrintDot()])"
+        "  epochs=EPOCHS, validation_split = 0.2, verbose=1\n",
+        "  )"
       ],
       "execution_count": 0,
       "outputs": []
