--- a/Cars.ipynb
+++ b/Cars.ipynb
@@ -13,7 +13,7 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -546,7 +546,6 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    #input_shape=(9,),\n",
         "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
         "    layers.Dense(64, activation=tf.nn.relu),\n",
         "    layers.Dense(1)\n",
@@ -630,7 +629,7 @@
         "    if epoch % 100 == 0: print('')\n",
         "    print('.', end='')\n",
         "\n",
-        "EPOCHS = 1000\n",
+        "EPOCHS = 100\n",
         "\n",
         "history = model.fit(\n",
         "  normed_train_data, train_labels,\n",
@@ -661,6 +660,45 @@
         "hist = pd.DataFrame(history.history)\n",
         "hist['epoch'] = history.epoch\n",
         "hist.tail()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gTpQFifuhsSJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def plot_history(history):\n",
+        "  hist = pd.DataFrame(history.history)\n",
+        "  hist['epoch'] = history.epoch\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Abs Error [MPG]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_absolute_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_absolute_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,5])\n",
+        "  plt.legend()\n",
+        "\n",
+        "  plt.figure()\n",
+        "  plt.xlabel('Epoch')\n",
+        "  plt.ylabel('Mean Square Error [$MPG^2$]')\n",
+        "  plt.plot(hist['epoch'], hist['mean_squared_error'],\n",
+        "           label='Train Error')\n",
+        "  plt.plot(hist['epoch'], hist['val_mean_squared_error'],\n",
+        "           label = 'Val Error')\n",
+        "  plt.ylim([0,20])\n",
+        "  plt.legend()\n",
+        "  plt.show()\n",
+        "\n",
+        "\n",
+        "plot_history(history)"
       ],
       "execution_count": 0,
       "outputs": []
