--- a/muffinOrDog.ipynb
+++ b/muffinOrDog.ipynb
@@ -6,13 +6,14 @@
       "name": "imageClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM3Ki7Utirs4YqzUC0pq1IK",
+      "authorship_tag": "ABX9TyOvvDr3CmBBR4MvyDhTwgPI",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -60,6 +61,13 @@
       },
       "source": [
         "# TensorFlow and tf.keras\n",
+        "# Install TensorFlow\n",
+        "try:\n",
+        "  # %tensorflow_version only exists in Colab.\n",
+        "  %tensorflow_version 2.x\n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "\n",
