--- a/Wage_per_hour.ipynb
+++ b/Wage_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "Wage_per_hour.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMCiEKn7V2k+CTq+bIWZGPs",
+      "authorship_tag": "ABX9TyOe40NsgtBCmhbXTWLoh9xn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,20 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3qp8aXDwUM_z",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Can a person's hourly wage be predicted from a set of features?**\n",
+        "\n",
+        "This model uses linear regression:<br>\n",
+        ">Multiple inputs<br>\n",
+        ">One float output "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "rHyhWXYgzmVP",
@@ -99,8 +113,31 @@
       "source": [
         "#read in data using pandas\n",
         "dataset = pd.read_csv(\"hourly_wages.csv\")\n",
-        "#check data has been read in properly\n",
-        "dataset.tail()"
+        "#check data has been read in properly\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KKxgI6aJVU50",
+        "colab_type": "text"
+      },
+      "source": [
+        "wage_per_hour --> the label<br>\n",
+        "all other columns --> features<br>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0VeAAWJaUo76",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset.columns"
       ],
       "execution_count": 0,
       "outputs": []
@@ -119,6 +156,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cRjQcCAdVBK2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Split the dataset into training and test sets**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CuPqzRxeVHSG",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is a hyperparameter that can be adjusted. <br>\n",
+        "0.05 - 0.5"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "c_uOMdheypB2",
@@ -132,6 +190,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h1PvLzIVVg1a",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Separate the label from the features**"
+      ]
     },
     {
       "cell_type": "code",
@@ -181,6 +249,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XkB5m7bKWV15",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Normalize the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-u1QKRKK0swD",
@@ -198,6 +276,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XFaQ8d8YWZei",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create the model**\n",
+        "Tune the hyperparameters to improve the model performance. <br>\n",
+        "1. Number of nodes in each layers\n",
+        "2. Number and kinds of layers\n",
+        "3. activation functions\n",
+        "4. The learning rate in the optimizer (.0001 - .1)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jssbPzTdyxQD",
@@ -210,10 +303,10 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
+        "    layers.Dense(8, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
         "    #layers.Dropout(0.2),\n",
         "    #layers.Dense(8, activation=tf.nn.relu),\n",
-        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    layers.Dense(8, activation=tf.nn.relu),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -241,6 +334,18 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sQ2o0NssXrYV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train the Model**\n",
+        "Modify this hyperparameter<br>\n",
+        "1. Number of epochs"
+      ]
     },
     {
       "cell_type": "code",
@@ -286,17 +391,7 @@
         "  plt.ylim([0,5])\n",
         "  plt.legend()\n",
         "\n",
-        "  plt.figure()\n",
-        "  plt.xlabel('Epoch')\n",
-        "  plt.ylabel('Mean Square Error [$MPG^2$]')\n",
-        "  plt.plot(hist['epoch'], hist['mean_squared_error'],\n",
-        "           label='Train Error')\n",
-        "  plt.plot(hist['epoch'], hist['val_mean_squared_error'],\n",
-        "           label = 'Val Error')\n",
-        "  plt.ylim([0,20])\n",
-        "  plt.legend()\n",
         "  plt.show()\n",
-        "\n",
         "\n",
         "plot_history(history)"
       ],
@@ -313,7 +408,7 @@
       "source": [
         "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=1)\n",
         "\n",
-        "print(\"Testing set Mean Abs Error: {:5.2f} wage_per_hour\".format(mae))"
+        "print(\"Testing set Mean Abs Error: ${:5.2f} wage_per_hour\".format(mae))"
       ],
       "execution_count": 0,
       "outputs": []
