--- a/Wage_per_hour.ipynb
+++ b/Wage_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "Wage_per_hour.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOe40NsgtBCmhbXTWLoh9xn",
+      "authorship_tag": "ABX9TyOPm1j2BSx3PXZNaYc7xjC3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,6 +151,23 @@
       },
       "source": [
         "dataset.isna().sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vl2sDHdZaenT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "corr = dataset.corr()\n",
+        "sns.heatmap(corr, \n",
+        "            xticklabels=corr.columns.values,\n",
+        "            yticklabels=corr.columns.values)\n",
+        "plt.show()\n"
       ],
       "execution_count": 0,
       "outputs": []
