--- a/Wage_per_hour.ipynb
+++ b/Wage_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "Wage_per_hour.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOPm1j2BSx3PXZNaYc7xjC3",
+      "authorship_tag": "ABX9TyPCwikWT5tlzq+aKsg3YyTv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,6 +151,32 @@
       },
       "source": [
         "dataset.isna().sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X2CpVHrSeMfs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset[\"female\"].value_counts()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G7YSOmeIlSZl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset[\"age\"].value_counts()"
       ],
       "execution_count": 0,
       "outputs": []
