--- a/muffinOrDog.ipynb
+++ b/muffinOrDog.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "muffinOrDog.ipynb",
+      "name": "imageClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOvvDr3CmBBR4MvyDhTwgPI",
+      "authorship_tag": "ABX9TyP/TQ5+gEfnO/qLQgkVawDV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,7 @@
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
+        "import pandas as pd\n",
         "\n",
         "# Helper libraries\n",
         "import numpy as np\n",
@@ -104,8 +105,7 @@
         "                img = img.crop((0, 0, m_min_d, m_min_d))\n",
         "        # Scale the image to the requested maxsize by Anti-alias sampling.\n",
         "        img.thumbnail(maxsize, PIL.Image.ANTIALIAS)\n",
-        "        return np.asarray(img)\n",
-        "\n"
+        "        return np.asarray(img)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -198,8 +198,7 @@
         "colab": {}
       },
       "source": [
-        "train_images.shape\n",
-        "(26, 100, 100)"
+        "train_images.shape"
       ],
       "execution_count": 0,
       "outputs": []
@@ -212,7 +211,7 @@
         "colab": {}
       },
       "source": [
-        "print(train_labels)\n"
+        "print(train_labels)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -355,19 +354,6 @@
       },
       "source": [
         "predictions = model.predict(test_images)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ztqR6Q03BLS7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(predictions)"
       ],
       "execution_count": 0,
       "outputs": []
