--- a/muffinOrDog.ipynb
+++ b/muffinOrDog.ipynb
@@ -6,7 +6,7 @@
       "name": "imageClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyP/TQ5+gEfnO/qLQgkVawDV",
+      "authorship_tag": "ABX9TyMu28KM0ts8m3Z0sLpV1jJ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87pxbTe65CuO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Can we predict if an image has a muffin or chihuahua?**"
+      ]
     },
     {
       "cell_type": "code",
@@ -84,6 +94,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UUBg8zUt5m7G",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Define Python functions for loading the dataset**"
+      ]
     },
     {
       "cell_type": "code",
@@ -280,6 +300,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dt_8mI615zaF",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **The model**"
+      ]
     },
     {
       "cell_type": "code",
